# H2O

./: .gitignore  0B1a.⬛️🗄️Data Core 🗄️.user.js  0Z2.⚫️🔌 Data Tab (Control Hub Plugin) 🕹️.user.js  1A1d.🟥🗺️ MiniMap Engine 🚀🗺️.user.js  1A2.🟥🎨 Answer Wash Engine (MiniMap Add-on) 🗺️.user.js  1A7.🔴🏷️ Title Labels (MiniMap Plugin) 🗺️.user.js  1X.🔴🧮 Answer Numbers & Style 🧮.user.js  1Z.🔴⏳ Answer Timestamp ⏳.user.js  4A.🟩🎖️ Dock Panel 🎖️.user.js  4B.🟩🖌️ Highlights Engine 🖌️.user.js  4C.🟢🌈 Highlights Tab 🌈.user.js  4H.🟩🍰 Section Bands 🍰.user.js  4T.🟢📎 Attachments Tab 📎.user.js  6a.🟦📀 Export Chat 📀.user.js  9z.🟤🧼 Hide Disclaimer 🧼.user.js  H2O Right Sidebar POC (Tab + Drawer).user.js  package-lock.json  package.json  versions.csv  zh1.🔴🧩 Section Collapser 🧩 (4-Step Cycle Restore).user.js
apps/studio/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/studio/desktop/src-tauri/capabilities/: archive-cas.json  archive-export.json  default.json
apps/studio/desktop/src-tauri/icons/: README.md
apps/studio/desktop/src-tauri/src/: f5h_final_validation_seed.rs  folder_metadata_apply_proof.rs  folder_metadata_apply_rollback_proof.rs  folder_metadata_color_apply.rs  lib.rs  real_transport_capability_probe.rs  sqlite_writer_identity.rs  sync_conflict_decision.rs  sync_conflict_ingest.rs  synthetic_cleanup_commit.rs  synthetic_cleanup_dryrun.rs  synthetic_marker.rs
artifacts/: README.md
assets/: README.md
changelogs/: 9z.hide.disclaimer.CHANGELOG.md
cockpit-pro-site/: README.md  package-lock.json
config/: dev-order.json  dev-order.tsv  dev-order.txt  extension-keys.json  loader-deps.json  loader-tiers.json  scripts-list.tsv
meta/: README.md
scripts/: 0A0a.⬛️🚀 Loader Bridge 🚀.user.js  0A1a.⬛️🧠 H2O Core 🧠.js  0A1a.⬛️🧠 H2O Core 🧠.user.js  0A1b.⬛️🛰 Observer Hub 🛰.user.js  0A2a.⬛️🛰 Observer Hub 🛰.js  0B1a.⬛️⚡ Performance Governor 🧭⚡.js  0B1a.⬛️🗄️ Data Core 🗄️.user.js  0B1a.⬛️🗄️Data Core 🗄️.user.js  0B1b.⬛️⚡ Performance Store 💾⚡.js  0B1b.⬛️🛜 Data Sync 🛜.user.js  0B1c.⬛️⚡ Performance Adapters 🔄⚡.js  0B1c.⬛️🧩 Sync Providers 🧩.user.js  0D1a.⬛️🗄️ Data Core 🗄️.js  (+273 more)
(+2076 files in other folders)
