[package]
name = "h2o-studio-desktop"
version = "0.1.0"
description = "H2O Studio — Tauri V2 desktop shell (M1 boot proof)."
edition = "2021"
rust-version = "1.77"
authors = ["H2O / Cockpit Pro"]
license = "UNLICENSED"

[lib]
name = "h2o_studio_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
